--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 	</head>
 	<body>hello
-	shijian :<a href="./baidu/index.html">时间</a>
+	shijian :<a href="baidu/index.html">时间</a>
 		<a href="time.html">时间</a>
 	</body>
 </html>
