--- a/baidu/index.html
+++ b/baidu/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>百度一下，你就知道</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=gb2312" /> 
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<link rel="stylesheet" type="text/css" href="baidu.css">
 </head>
 <body>
