--- a/baidu/index.html
+++ b/baidu/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>百度一下，你就知道</title>
-	<meta charset="utf-8">
+	<meta charset="gbk">
 	<link rel="stylesheet" type="text/css" href="baidu.css">
 </head>
 <body>
