--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
 		
 	</head>
 	<body>hello
-	<a href="baidu/index.html">百度</a>
-	<a href="time.html">时间</a>
+		<ul>
+		<li><a href="baidu/index.html">百度</a></li>
+		<li><a href="time.html">时间</a></li>
+		<li><a href="./123/helloworld.html">hello world</a></li>
+		<li><a href="./123/2.html">练习2</a></li>
+		<li><a href="./123/3.html">练习3</a></li>
+		<li><a href="./123/baidu/index.html">baidu</a></li>
+		<li><a href="./123/time.html">时间</a></li>
+		<li><a href="./123/del.html">表格删除添加</a></li>
+		<li><a href="./123/canvas_ball.html">小球</a></li>
+		<li><a href="./123/suiji.html">获取随机字符</a></li>
+		<li><a href="./123/jisuanqi.html">js简易计算器</a></li>
+		<li><a href="./123/timing/index.html">计时</a></li>
+		<li><a href="./123/ball_bug/balls.html">小球动画bug版</a></li>
+		<li><a href="./123/ball_not_majorization/balls.html">小球动画未优化版</a></li>
+		<li><a href="./123/ball_demo/balls.html">小球动画优化自适应版</a></li>
+   
+		<li><a href="./game/snake.html">贪吃蛇</a></li>
+		<li><a href="./game/beta0.01.html">游戏测试版本0.01</a></li>
+		<li><a href="./game/beta0.02/beta0.02.html">游戏beta0.02炮弹</a></li>
+		<li><a href="./game/beta0.03/beta0.03.html">游戏beta0.03双坦克</a></li>
+		<li><a href="./game/beta0.04/beta0.04.html">beta0.04碰撞检测bug</a></li>
+		<li><a href="./game/beta0.05/beta0.05.html">beta0.05炮弹碰撞检测</a></li>
+		<li><a href="./game/migon.html">迷宫求解</a></li>
+		<li><a href="./pbl/index.html">原生js瀑布流</a></li>
+		</ul>
 	</body>
 </html>
