--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li><a href="./123/baidu/index.html">baidu</a></li>
 		<li><a href="./123/time.html">时间</a></li>
 		<li><a href="./123/del.html">表格删除添加</a></li>
-		<li><a href="./123/canvas_ball.html">小球</a></li>
+		<li><a href="ball.html">小球下落</a></li>
 		<li><a href="./123/suiji.html">获取随机字符</a></li>
 		<li><a href="./123/jisuanqi.html">js简易计算器</a></li>
 		<li><a href="./123/timing/index.html">计时</a></li>
