--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li><a href="baidu/index.html">百度</a></li>
 		<li><a href="time.html">时间</a></li>
 		<li><a href="ball.html">小球下落</a></li>
-		<li><a href="./123/suiji.html">获取随机字符</a></li>
+		<li><a href="suiji.html">获取随机字符</a></li>
 		<li><a href="./123/jisuanqi.html">js简易计算器</a></li>
 		<li><a href="./123/timing/index.html">计时</a></li>
 		<li><a href="./123/ball_bug/balls.html">小球动画bug版</a></li>
