--- a/suiji.html
+++ b/suiji.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>»ñÈ¡Ëæ»ú×Ö·û</title>
-	
+	<title>è·å–éšæœºå­—ç¬¦</title>
+	<meta charset="gbk">
 	<style type="text/css">
 		*{
 			margin: 20px 0px 20px 10px;
@@ -17,10 +17,10 @@
 
 
 		<form>
-			ÇëÊäÈëÊı×Ö<input type="text" name="" value="">
-			<input type="button" name=" " value="Ö´ĞĞ" onclick="on()" >
+			è¯·è¾“å…¥æ•°å­—<input type="text" name="" value="">
+			<input type="button" name=" " value="æ‰§è¡Œ" onclick="on()" >
 		</form>
-		<p>ÄãµÃµ½µÄ×Ö·ûÊÇ"<span></span>"</p>
+		<p>ä½ å¾—åˆ°çš„å­—ç¬¦æ˜¯"<span></span>"</p>
 
 	</div>
 	<script type="text/javascript">
@@ -35,9 +35,9 @@
 			var span = document.getElementsByTagName('span')[0]
 			var item = document.getElementsByTagName('input')[0].value
 			if (isNaN(item)) {
-			alert("ÇëÊäÈëÊı×Ö")
+			alert("è¯·è¾“å…¥æ•°å­—")
 			}else if (item<=0) {
-				alert("ÇëÊäÈë´óÓÚ0µÄÊı")
+				alert("è¯·è¾“å…¥å¤§äº0çš„æ•°")
 
 			}else {
 				var item1 = get(item)
