--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<li><a href="suiji.html">获取随机字符</a></li>
 		<li><a href="jisuanqi.html">js简易计算器</a></li>
 		<li><a href="time2/index.html">计时</a></li>
-		<li><a href="./123/ball_demo/balls.html">小球动画优化自适应版</a></li>
+		<li><a href="time3/index.html">小球动画优化版</a></li>
    
 		<li><a href="./game/snake.html">贪吃蛇</a></li>
 		<li><a href="./game/beta0.01.html">游戏测试版本0.01</a></li>
