--- a/baidu/index.html
+++ b/baidu/index.html
@@ -9,7 +9,7 @@
 <!-- 	<hr color="#888" width="0.1px" /> -->
 	<div class="tonglan">
 		<div class="ul1">
-			<a href="" class="none">无锡:</a>
+			<a href="" class="none">烟台:</a>
 			<a href=""><img src="a1.jpg" class="none"></a>
 			<a href="" class="none">31℃</a>
 			<a href="" class="none lan"><b>优</b></a>
