--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li><a href="time2/index.html">计时</a></li>
 		<li><a href="time3/index.html">小球动画优化版</a></li>
    
-		<li><a href="./game/snake.html">贪吃蛇</a></li>
+		<li><a href="snake.html">贪吃蛇</a></li>
 		<li><a href="./game/beta0.01.html">游戏测试版本0.01</a></li>
 		<li><a href="./game/beta0.02/beta0.02.html">游戏beta0.02炮弹</a></li>
 		<li><a href="./game/beta0.03/beta0.03.html">游戏beta0.03双坦克</a></li>
