--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
 		<li><a href="jisuanqi.html">js简易计算器</a></li>
 		<li><a href="time2/index.html">计时</a></li>
 		<li><a href="time3/index.html">小球动画优化版</a></li>
-   
 		<li><a href="snake.html">贪吃蛇</a></li>
-		<li><a href="./game/beta0.01.html">游戏测试版本0.01</a></li>
-		<li><a href="./game/beta0.02/beta0.02.html">游戏beta0.02炮弹</a></li>
-		<li><a href="./game/beta0.03/beta0.03.html">游戏beta0.03双坦克</a></li>
-		<li><a href="./game/beta0.04/beta0.04.html">beta0.04碰撞检测bug</a></li>
-		<li><a href="./game/beta0.05/beta0.05.html">beta0.05炮弹碰撞检测</a></li>
-		<li><a href="./game/migon.html">迷宫求解</a></li>
-		<li><a href="./pbl/index.html">原生js瀑布流</a></li>
+		<li><a href="tank/index.html">游戏beta0.02炮弹</a></li>
+	
 		</ul>
 	</body>
 </html>
