--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li><a href="time2/index.html">计时</a></li>
 		<li><a href="time3/index.html">小球动画优化版</a></li>
 		<li><a href="snake.html">贪吃蛇</a></li>
-		<li><a href="tank/index.html">游戏beta0.02炮弹</a></li>
+		<li><a href="tank/tank.html">游戏beta0.02炮弹</a></li>
 	
 		</ul>
 	</body>
