--- a/tank/tank.html
+++ b/tank/tank.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="gbk">
-    <title>游戏地图beta0.01</title>
+    <meta charset="utf-8">
+    <title>娓告垙鍦板浘beta0.01</title>
     <style type="text/css">
     body {
     	text-align: center;
@@ -10,9 +10,9 @@
     </style>
 </head>
 <body>
-	<div>上下左右键移动x键发射！</div>
+	<div>涓婁笅宸﹀彸閿Щ鍔▁閿彂灏勶紒</div>
     <canvas id="canvas" style="border: 1px solid black">
-        当前浏览器不支持Canvas，请更换浏览器后再试
+        褰撳墠娴忚鍣ㄤ笉鏀寔Canvas锛岃鏇存崲娴忚鍣ㄥ悗鍐嶈瘯
     </canvas>
 
     <script src="digit.js"></script>
