--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	</head>
 	<body>hello
 		<ul>
-		<li><a href="baidu/index.html">百度</a></li>
-		<li><a href="time.html">时间</a></li>
-		<li><a href="ball.html">小球下落</a></li>
-		<li><a href="suiji.html">获取随机字符</a></li>
-		<li><a href="jisuanqi.html">js简易计算器</a></li>
-		<li><a href="time2/index.html">计时</a></li>
-		<li><a href="time3/index.html">小球动画优化版</a></li>
-		<li><a href="snake.html">贪吃蛇</a></li>
-		<li><a href="tank/tank.html">游戏beta0.02炮弹</a></li>
+		<li>百度：<a href="baidu/index.html">index.html</a></li>
+		<li>时间：<a href="time.html">index.html</a></li>
+		<li>小球下落：<a href="ball.html">index.html</a></li>
+		<li>获取随机字符：<a href="suiji.html">index.html</a></li>
+		<li>js简易计算器：<a href="jisuanqi.html">index.html</a></li>
+		<li>计时：<a href="time2/index.html">index.html</a></li>
+		<li>小球动画优化版：<a href="time3/index.html">index.html</a></li>
+		<li>贪吃蛇：<a href="snake.html">index.html</a></li>
+		<li>炮弹测试：<a href="tank/tank.html">index.html</a></li>
 	
 		</ul>
 	</body>
