--- a/tabs.html
+++ b/tabs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-<meta charset="gbk">
-<title>Ñ¡Ïî¿¨</title>
+<meta charset="utf-8">
+<title>é€‰é¡¹å¡</title>
 <style>
 body,ul,li{margin:0;padding:0;}
 body{font:12px/1.5 Tahoma;}
@@ -35,51 +35,51 @@ window.onload = function ()
 <body>
 <div id="outer">
     <ul id="tab">
-        <li class="current">µÚÒ»¿Î</li>
-        <li>µÚ¶þ¿Î</li>
-        <li>µÚÈý¿Î</li>
+        <li class="current">ç¬¬ä¸€è¯¾</li>
+        <li>ç¬¬äºŒè¯¾</li>
+        <li>ç¬¬ä¸‰è¯¾</li>
     </ul>
     <div id="content">
         <ul style="display:block;">
-            <li>ÍøÒ³ÌØÐ§Ô­Àí·ÖÎö</li>
-            <li>ÏìÓ¦ÓÃ»§²Ù×÷</li>
-            <li>ÌáÊ¾¿òÐ§¹û</li>
-            <li>ÊÂ¼þÇý¶¯</li>
-            <li>ÔªËØÊôÐÔ²Ù×÷</li>
-            <li>¶¯ÊÖ±àÐ´µÚÒ»¸öJSÌØÐ§</li>
-            <li>ÒýÈëº¯Êý</li>
-            <li>ÍøÒ³»»·ôÐ§¹û</li>
-            <li>Õ¹¿ª/ÊÕËõ²¥·ÅÁÐ±íÐ§¹û</li>
+            <li>ç½‘é¡µç‰¹æ•ˆåŽŸç†åˆ†æž</li>
+            <li>å“åº”ç”¨æˆ·æ“ä½œ</li>
+            <li>æç¤ºæ¡†æ•ˆæžœ</li>
+            <li>äº‹ä»¶é©±åŠ¨</li>
+            <li>å…ƒç´ å±žæ€§æ“ä½œ</li>
+            <li>åŠ¨æ‰‹ç¼–å†™ç¬¬ä¸€ä¸ªJSç‰¹æ•ˆ</li>
+            <li>å¼•å…¥å‡½æ•°</li>
+            <li>ç½‘é¡µæ¢è‚¤æ•ˆæžœ</li>
+            <li>å±•å¼€/æ”¶ç¼©æ’­æ”¾åˆ—è¡¨æ•ˆæžœ</li>
         </ul>
         <ul>
-            <li>¸Ä±äÍøÒ³±³¾°ÑÕÉ«</li>
-            <li>º¯Êý´«²Î</li>
-            <li>¸ßÖØÓÃÐÔº¯ÊýµÄ±àÐ´</li>
-            <li>126ÓÊÏäÈ«Ñ¡Ð§¹û</li>
-            <li>Ñ­»·¼°±éÀú²Ù×÷</li>
-            <li>µ÷ÊÔÆ÷µÄ¼òµ¥Ê¹ÓÃ</li>
-            <li>µäÐÍÑ­»·µÄ¹¹³É</li>
-            <li>forÑ­»·ÅäºÏifÅÐ¶Ï</li>
-            <li>classNameµÄÊ¹ÓÃ</li>
-            <li>innerHTMLµÄÊ¹ÓÃ</li>
-            <li>ê©ÄÉÓ¡ÏóÐ§¹û</li>
-            <li>Êý×é</li>
-            <li>×Ö·û´®Á¬½Ó</li>
+            <li>æ”¹å˜ç½‘é¡µèƒŒæ™¯é¢œè‰²</li>
+            <li>å‡½æ•°ä¼ å‚</li>
+            <li>é«˜é‡ç”¨æ€§å‡½æ•°çš„ç¼–å†™</li>
+            <li>126é‚®ç®±å…¨é€‰æ•ˆæžœ</li>
+            <li>å¾ªçŽ¯åŠéåŽ†æ“ä½œ</li>
+            <li>è°ƒè¯•å™¨çš„ç®€å•ä½¿ç”¨</li>
+            <li>å…¸åž‹å¾ªçŽ¯çš„æž„æˆ</li>
+            <li>forå¾ªçŽ¯é…åˆifåˆ¤æ–­</li>
+            <li>classNameçš„ä½¿ç”¨</li>
+            <li>innerHTMLçš„ä½¿ç”¨</li>
+            <li>æˆ›çº³å°è±¡æ•ˆæžœ</li>
+            <li>æ•°ç»„</li>
+            <li>å­—ç¬¦ä¸²è¿žæŽ¥</li>
         </ul>
         <ul>
-            <li>JavaScript×é³É£ºECMAScript¡¢DOM¡¢BOM£¬JavaScript¼æÈÝÐÔÀ´Ô´</li>
-            <li>JavaScript³öÏÖµÄÎ»ÖÃ¡¢ÓÅÈ±µã</li>
-            <li>±äÁ¿¡¢ÀàÐÍ¡¢typeof¡¢Êý¾ÝÀàÐÍ×ª»»¡¢±äÁ¿×÷ÓÃÓò</li>
-            <li>±Õ°ü£ºÊ²Ã´ÊÇ±Õ°ü¡¢¼òµ¥Ó¦ÓÃ¡¢±Õ°üÈ±µã</li>
-            <li>ÔËËã·û£ºËãÊõ¡¢¸³Öµ¡¢¹ØÏµ¡¢Âß¼­¡¢ÆäËûÔËËã·û</li>
-            <li>³ÌÐòÁ÷³Ì¿ØÖÆ£ºÅÐ¶Ï¡¢Ñ­»·¡¢Ìø³ö</li>
-            <li>ÃüÃû¹æ·¶£ºÃüÃû¹æ·¶¼°±ØÒªÐÔ¡¢ÐÙÑÀÀûÃüÃû·¨</li>
-            <li>º¯ÊýÏê½â£ºº¯Êý¹¹³É¡¢µ÷ÓÃ¡¢ÊÂ¼þ¡¢´«²ÎÊý¡¢¿É±ä²Î¡¢·µ»ØÖµ</li>
-            <li>¶¨Ê±Æ÷µÄÊ¹ÓÃ£ºsetInterval¡¢setTimeout</li>
-            <li>¶¨Ê±Æ÷Ó¦ÓÃ£ºÕ¾³¤Õ¾µ¼º½Ð§¹û</li>
-            <li>¶¨Ê±Æ÷Ó¦ÓÃ£º×Ô¶¯²¥·ÅµÄÑ¡Ïî¿¨</li>
-            <li>¶¨Ê±Æ÷Ó¦ÓÃ£ºÊýÂëÊ±ÖÓ</li>
-            <li>³ÌÐòµ÷ÊÔ·½·¨</li>
+            <li>JavaScriptç»„æˆï¼šECMAScriptã€DOMã€BOMï¼ŒJavaScriptå…¼å®¹æ€§æ¥æº</li>
+            <li>JavaScriptå‡ºçŽ°çš„ä½ç½®ã€ä¼˜ç¼ºç‚¹</li>
+            <li>å˜é‡ã€ç±»åž‹ã€typeofã€æ•°æ®ç±»åž‹è½¬æ¢ã€å˜é‡ä½œç”¨åŸŸ</li>
+            <li>é—­åŒ…ï¼šä»€ä¹ˆæ˜¯é—­åŒ…ã€ç®€å•åº”ç”¨ã€é—­åŒ…ç¼ºç‚¹</li>
+            <li>è¿ç®—ç¬¦ï¼šç®—æœ¯ã€èµ‹å€¼ã€å…³ç³»ã€é€»è¾‘ã€å…¶ä»–è¿ç®—ç¬¦</li>
+            <li>ç¨‹åºæµç¨‹æŽ§åˆ¶ï¼šåˆ¤æ–­ã€å¾ªçŽ¯ã€è·³å‡º</li>
+            <li>å‘½åè§„èŒƒï¼šå‘½åè§„èŒƒåŠå¿…è¦æ€§ã€åŒˆç‰™åˆ©å‘½åæ³•</li>
+            <li>å‡½æ•°è¯¦è§£ï¼šå‡½æ•°æž„æˆã€è°ƒç”¨ã€äº‹ä»¶ã€ä¼ å‚æ•°ã€å¯å˜å‚ã€è¿”å›žå€¼</li>
+            <li>å®šæ—¶å™¨çš„ä½¿ç”¨ï¼šsetIntervalã€setTimeout</li>
+            <li>å®šæ—¶å™¨åº”ç”¨ï¼šç«™é•¿ç«™å¯¼èˆªæ•ˆæžœ</li>
+            <li>å®šæ—¶å™¨åº”ç”¨ï¼šè‡ªåŠ¨æ’­æ”¾çš„é€‰é¡¹å¡</li>
+            <li>å®šæ—¶å™¨åº”ç”¨ï¼šæ•°ç æ—¶é’Ÿ</li>
+            <li>ç¨‹åºè°ƒè¯•æ–¹æ³•</li>
         </ul>
     </div>
 </div>
