--- a/changestyle.html
+++ b/changestyle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-<meta charset="gbk">
-<title>Í¨¹ý²ÎÊý¸Ä±äDivÊôÐÔµÄÖµ</title>
+<meta charset="utf-8">
+<title>é€šè¿‡å‚æ•°æ”¹å˜Divå±žæ€§çš„å€¼</title>
 <style>
 body,p{margin:0;padding:0;}
 body{color:#333;font:12px/1.5 Tahoma;padding-top:10px;}
@@ -34,11 +34,11 @@ window.onload = function ()
 </head>
 <body>
 <div id="outer">
-    <p><label>ÊôÐÔÃû£º</label><input type="text" value="background" /></p>
-    <p><label>ÊôÐÔÖµ£º</label><input type="text" value="blue" /></p>
-    <p><label></label><button>È·¶¨</button><button>ÖØÖÃ</button></p>
+    <p><label>å±žæ€§åï¼š</label><input type="text" value="background" /></p>
+    <p><label>å±žæ€§å€¼ï¼š</label><input type="text" value="blue" /></p>
+    <p><label></label><button>ç¡®å®š</button><button>é‡ç½®</button></p>
 </div>
-<div id="div1">ÔÚÉÏ·½ÊäÈë¿òÊäÈë"ÊôÐÔÃû"¼°"ÊôÐÔÖµ"£¬µã»÷È·¶¨°´Å¥²é¿´Ð§¹û¡£</div>
+<div id="div1">åœ¨ä¸Šæ–¹è¾“å…¥æ¡†è¾“å…¥"å±žæ€§å"åŠ"å±žæ€§å€¼"ï¼Œç‚¹å‡»ç¡®å®šæŒ‰é’®æŸ¥çœ‹æ•ˆæžœã€‚</div>
 </body>
 </html>
 
