--- a/tabs/index.html
+++ b/tabs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-<meta charset="gbk">
-<title>setTimeoutÓ¦ÓÃ</title>
+<meta charset="utf-8">
+<title>setTimeoutåº”ç”¨</title>
 <style>
 body,div,ul,li,p{margin:0;padding:0;}
 body{font:12px/1.5 Arial;}
@@ -56,7 +56,7 @@ window.onload = function ()
 			oEm.style.left = this.offsetLeft - oSubNav.offsetLeft + 50 + "px";
 			clearTimeout(timer);
 			
-			//×èÖ¹ÊÂ¼þÃ°ÅÝ
+			//é˜»æ­¢äº‹ä»¶å†’æ³¡
 			oSubNav.onmouseover = function (event)
 			{
 				(event || window.event).cancelBubble = true;
@@ -77,81 +77,81 @@ window.onload = function ()
 <body>
 <div id="nav">
     <ul>
-        <li><a href="javascript:;">Õ¾³¤Ö®¼Ò</a></li>
+        <li><a href="javascript:;">ç«™é•¿ä¹‹å®¶</a></li>
         <li>
-            <a href="javascript:;">ÐÐÒµ×ÊÑ¶</a>
+            <a href="javascript:;">è¡Œä¸šèµ„è®¯</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">Òµ½ç¶¯Ì¬</a>|
-                        <a href="javascript:;">ÊÕ¹ºÈÚ×Ê</a>|
-                        <a href="javascript:;">ÃÅ»§¶¯Ì¬</a>|
-                        <a href="javascript:;">ËÑË÷ÒýÇæ</a>|
-                        <a href="javascript:;">ÍøÂçÓÎÏ·</a>|
-                        <a href="javascript:;">µç×ÓÉÌÎñ</a>|
-                        <a href="javascript:;">¹ã¸æ´«Ã½</a>|
-                        <a href="javascript:;">³§ÉÌ¿ª·¢</a>
+                        <a href="javascript:;">ä¸šç•ŒåŠ¨æ€</a>|
+                        <a href="javascript:;">æ”¶è´­èžèµ„</a>|
+                        <a href="javascript:;">é—¨æˆ·åŠ¨æ€</a>|
+                        <a href="javascript:;">æœç´¢å¼•æ“Ž</a>|
+                        <a href="javascript:;">ç½‘ç»œæ¸¸æˆ</a>|
+                        <a href="javascript:;">ç”µå­å•†åŠ¡</a>|
+                        <a href="javascript:;">å¹¿å‘Šä¼ åª’</a>|
+                        <a href="javascript:;">åŽ‚å•†å¼€å‘</a>
                     </span>
                 </p>
             </div>
         </li>
         <li>
-            <a href="javascript:;">Õ¾³¤ÔÚÏß</a>
+            <a href="javascript:;">ç«™é•¿åœ¨çº¿</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">Õ¾³¤±¨µÀ</a>|
-                        <a href="javascript:;">ºÃÕ¾ÍÆ¼ö</a>|
-                        <a href="javascript:;">Õ¾³¤¾Û»á</a>|
-                        <a href="javascript:;">Õ¾³¤·ÃÌ¸</a>|
-                        <a href="javascript:;">Õ¾³¤²è¹Ý</a>|
-                        <a href="javascript:;">ÍøÕ¾ÅÅÐÐ</a>
+                        <a href="javascript:;">ç«™é•¿æŠ¥é“</a>|
+                        <a href="javascript:;">å¥½ç«™æŽ¨è</a>|
+                        <a href="javascript:;">ç«™é•¿èšä¼š</a>|
+                        <a href="javascript:;">ç«™é•¿è®¿è°ˆ</a>|
+                        <a href="javascript:;">ç«™é•¿èŒ¶é¦†</a>|
+                        <a href="javascript:;">ç½‘ç«™æŽ’è¡Œ</a>
                     </span>
                 </p>
             </div>
         </li>
         <li>
-            <a href="javascript:;">ÍøÕ¾ÔËÓª</a>
+            <a href="javascript:;">ç½‘ç«™è¿è¥</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">½¨Õ¾¾­Ñé</a>|
-                        <a href="javascript:;">²ß»®Ó¯Àû</a>|
-                        <a href="javascript:;">ËÑË÷ÓÅ»¯</a>|
-                        <a href="javascript:;">ÍøÕ¾ÍÆ¹ã</a>|
-                        <a href="javascript:;">Ãâ·Ñ×ÊÔ´</a>
+                        <a href="javascript:;">å»ºç«™ç»éªŒ</a>|
+                        <a href="javascript:;">ç­–åˆ’ç›ˆåˆ©</a>|
+                        <a href="javascript:;">æœç´¢ä¼˜åŒ–</a>|
+                        <a href="javascript:;">ç½‘ç«™æŽ¨å¹¿</a>|
+                        <a href="javascript:;">å…è´¹èµ„æº</a>
                     </span>
                 </p>
             </div>
         </li>
         <li>
-            <a href="javascript:;">Éè¼ÆÔÚÏß</a>
+            <a href="javascript:;">è®¾è®¡åœ¨çº¿</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">¿áÕ¾ÍÆ¼ö</a>|
-                        <a href="javascript:;">ÍøÒ³Éè¼Æ</a>|
-                        <a href="javascript:;">WEB±ê×¼</a>|
-                        <a href="javascript:;">ÊÓÆµ´¦Àí</a>|
-                        <a href="javascript:;">Éè¼Æ»î¶¯</a>
+                        <a href="javascript:;">é…·ç«™æŽ¨è</a>|
+                        <a href="javascript:;">ç½‘é¡µè®¾è®¡</a>|
+                        <a href="javascript:;">WEBæ ‡å‡†</a>|
+                        <a href="javascript:;">è§†é¢‘å¤„ç†</a>|
+                        <a href="javascript:;">è®¾è®¡æ´»åŠ¨</a>
                     </span>
                 </p>
             </div>
         </li>
         <li>
-            <a href="javascript:;">ÍøÂç±à³Ì</a>
+            <a href="javascript:;">ç½‘ç»œç¼–ç¨‹</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">Asp±à³Ì</a>|
-                        <a href="javascript:;">Php±à³Ì</a>|
-                        <a href="javascript:;">.Net±à³Ì</a>|
-                        <a href="javascript:;">Xml±à³Ì</a>|
+                        <a href="javascript:;">Aspç¼–ç¨‹</a>|
+                        <a href="javascript:;">Phpç¼–ç¨‹</a>|
+                        <a href="javascript:;">.Netç¼–ç¨‹</a>|
+                        <a href="javascript:;">Xmlç¼–ç¨‹</a>|
                         <a href="javascript:;">Access</a>|
                         <a href="javascript:;">Mssql</a>|
                         <a href="javascript:;">Mysql</a>
@@ -160,33 +160,33 @@ window.onload = function ()
             </div>
         </li>
         <li>
-            <a href="javascript:;">ÁªÃË×ÊÑ¶</a>
+            <a href="javascript:;">è”ç›Ÿèµ„è®¯</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">ÁªÃË¶¯Ì¬</a>|
-                        <a href="javascript:;">ÁªÃË½éÉÜ</a>|
-                        <a href="javascript:;">ÁªÃËµãÆÀ</a>|
-                        <a href="javascript:;">Íø×¬¼¼ÇÉ</a>
+                        <a href="javascript:;">è”ç›ŸåŠ¨æ€</a>|
+                        <a href="javascript:;">è”ç›Ÿä»‹ç»</a>|
+                        <a href="javascript:;">è”ç›Ÿç‚¹è¯„</a>|
+                        <a href="javascript:;">ç½‘èµšæŠ€å·§</a>
                     </span>
                 </p>
             </div>
         </li>
         <li>
-            <a href="javascript:;">·þÎñÆ÷</a>
+            <a href="javascript:;">æœåŠ¡å™¨</a>
             <div class="subnav">
                 <em class="arrow"></em>
                 <p>        	
                     <span>
-                        <a href="javascript:;">Web·þÎñÆ÷</a>|
-                        <a href="javascript:;">Ftp·þÎñÆ÷</a>|
-                        <a href="javascript:;">Mail·þÎñÆ÷</a>|
-                        <a href="javascript:;">Dns·þÎñÆ÷</a>|
-                        <a href="javascript:;">Win·þÎñÆ÷</a>|
-                        <a href="javascript:;">Linux·þÎñÆ÷</a>|
-                        <a href="javascript:;">°²È«·À»¤</a>|
-                        <a href="javascript:;">ÐéÄâÖ÷»ú</a>
+                        <a href="javascript:;">WebæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">FtpæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">MailæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">DnsæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">WinæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">LinuxæœåŠ¡å™¨</a>|
+                        <a href="javascript:;">å®‰å…¨é˜²æŠ¤</a>|
+                        <a href="javascript:;">è™šæ‹Ÿä¸»æœº</a>
                     </span>
                 </p>
             </div>
