--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8"/>
 		
 	</head>
-	<body>hello
+	<body>
 		<ul>
 		<li>百度：<a href="baidu/index.html">index.html</a></li>
 		<li>时间：<a href="time.html">index.html</a></li>
