--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 	</head>
 	<body>
 		<ul>
-		<li>百度：<a href="baidu/index.html">index.html</a></li>
-		<li>时间：<a href="time.html">index.html</a></li>
-		<li>小球下落：<a href="ball.html">index.html</a></li>
-		<li>获取随机字符：<a href="suiji.html">index.html</a></li>
-		<li>js简易计算器：<a href="jisuanqi.html">index.html</a></li>
-		<li>计时：<a href="time2/index.html">index.html</a></li>
-		<li>小球动画优化版：<a href="time3/index.html">index.html</a></li>
-		<li>贪吃蛇：<a href="snake.html">index.html</a></li>
-		<li>炮弹测试：<a href="tank/tank.html">index.html</a></li>
-		<li>窗口拖拽：<a href="drag.html">index.html</a></li>
-		<li>简易选项卡：<a href="tabs.html">index.html</a></li>
-		<li>改变div属性：<a href="changestyle.html">index.html</a></li>
-		<li>自定义滚动条：<a href="scroll bar/index.html">index.html</a></li>
-		<li>自定义右键菜单：<a href="oncontextmenu/index.html">index.html</a></li>
-		<li>选项卡：<a href="tabs/index.html">index.html</a></li>
-		<li>移动效果：<a href="move/index.html">index.html</a></li>
-		<li>跟随鼠标移动大图：<a href="follow mouse/index.html">index.html</a></li>
-		<li>评分测试：<a href="star/index.html">index.html</a></li>
-		<li>模拟苹果菜单：<a href="apple/index.html">index.html</a></li>
-		<li>自动播放：<a href="change/index.html">index.html</a></li>
+		<li>百度：<a href="baidu/index.html">链接</a></li>
+		<li>时间：<a href="time.html">链接</a></li>
+		<li>小球下落：<a href="ball.html">链接</a></li>
+		<li>获取随机字符：<a href="suiji.html">i链接</a></li>
+		<li>js简易计算器：<a href="jisuanqi.html">链接</a></li>
+		<li>计时：<a href="time2/index.html">链接</a></li>
+		<li>小球动画优化版：<a href="time3/index.html">链接</a></li>
+		<li>贪吃蛇：<a href="snake.html">链接</a></li>
+		<li>炮弹测试：<a href="tank/tank.html">链接</a></li>
+		<li>窗口拖拽：<a href="drag.html">链接</a></li>
+		<li>简易选项卡：<a href="tabs.html">链接</a></li>
+		<li>改变div属性：<a href="changestyle.html">链接</a></li>
+		<li>自定义滚动条：<a href="scroll bar/index.html">链接</a></li>
+		<li>自定义右键菜单：<a href="oncontextmenu/index.html">链接</a></li>
+		<li>选项卡：<a href="tabs/index.html">链接</a></li>
+		<li>移动效果：<a href="move/index.html">链接</a></li>
+		<li>跟随鼠标移动大图：<a href="follow mouse/index.html">链接</a></li>
+		<li>评分测试：<a href="star/index.html">链接</a></li>
+		<li>模拟苹果菜单：<a href="apple/index.html">链接</a></li>
+		<li>自动播放：<a href="change/index.html">链接</a></li>
 		</ul>
 	</body>
 </html>
