--- a/index.html
+++ b/index.html
@@ -1,32 +1,190 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-		<meta charset="UTF-8"/>
+<head>
+<meta charset="utf-8">
+<meta name="renderer" content="webkit">
+<title>我的简介</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/main.css">
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/navFixed-1.0.1.min.js"></script>
+<script src="js/main.js"></script></head>
+<body>
+<section id="block-firstPage">
+<p class="blockTitle">Hello World</p>
+<div id="fstPage-down"><a href="#block-intro" hideFocus="true"></a></div>
+</section>
+
+<section id="block-nav">
+		<header class="container">
+			<a class="fl" href="#block-firstPage" id="logo" hideFocus="true">Jasin Yip</a>
+			<nav class="fr">
+<a href="#block-intro" id="nav-intro" hideFocus="true">个人简介</a>
+				<a href="#block-skill" id="nav-skill" hideFocus="true">专业技能</a>
+				<a href="#block-workEXP" id="nav-workEXP" hideFocus="true">工作经历</a>
+				<a href="#block-prjEXP" id="nav-prjEXP" hideFocus="true">项目经验</a>
+				<a href="#block-wantMore" id="nav-wantMore" hideFocus="true">联系邮箱</a>
+			</nav>
+		</header>
+	</section>
+
+
+
+
+
+	<section id="block-intro">
+		<div class="container">
+			<div id="intro-icon">
+				<img id="myPhoto" src="img/myPhoto.jpg">
+			</div>
+			
+			<div id="intro-text">
+				<ul class="fl">
+					<li><span>姓名</span> | 张远</li>
+					<li><span>手机</span> | 18264813395</li>
+					<li><span>邮箱</span> | 837808554@qq.com</li>
+					<li><span>所在地</span> | 山东 - 烟台</li>
+					<li><span>GitHub</span> | <a href="https://allissb.github.io/1/" hideFocus="true">点击
+
+进入</a> </li>
+				</ul>
+				<div class="fr">	<p>我是一个性格幽默、做事认真的人。<br>我喜欢研究所碰到的各种技术，不给自己
+
+设边界。<br>我有时间概念，能在约定时间内保证完成任务。</p>
+					<p>三个月前端开发学习经验，熟悉 HTML、CSS、Javascript，可以开发符合 W3C 标
+
+准的页面<br>
+						有良好的编码习惯。<br>
+						熟练使用 jQuery ，bootstrap框架，熟悉Ajax技术<br>
+						了解PHP+MySQL；理解基本的算法分析与数据结构，能够配合程序员完成
+
+相关工作。
+					</p>
+				</div>
+			</div>
+
+
+		</div>
+	</section>
+
+<section id="block-skill">
+		<div class="container">
+			<div class="skill-title">
+				<h2>专 业 技 能</h2>
+			</div>
+			<div class="skills"><ul class="skill-lang">
+					<li>语言</li>
+					<li>HTML(5)</li>
+					<li>CSS(3)</li>
+					<li>Javascript</li>
+					<li>PHP</li>
+					<li>SQL</li>
+				</ul>
+				<ul class="skill-idea">
+					<li>思想</li>
+					<li>W3C标准</li>
+					<li>语义化</li>
+					<li>表现与结构分离</li>
+					<li>响应式设计</li>
+				</ul>
+				<ul class="skill-frame">
+					<li>框架</li>
+					<li>jQuery</li>
+					<li>Bootstrap</li>
+					<li>jquery ui</li>
+				</ul>
+				<ul class="skill-tech">
+					<li>技术</li>
+					<li>Ajax</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+
+<section id="block-workEXP">
+		<div class="container">
+			<div class="work-title">
+			<h2>工 作 经 历</h2>
+			</div>
+			<div class="workEXP-main">	<ul class="timebox">
+					<li class="time0">2012.09 - 2016.7</li>
+					<li class="time1">2016.07 - 2017.2</li>
+                                                                                          <li class="time1">2018.01 - now</li>
+				</ul>
+				<div class="timeline"></div>
+				<ul class="workbox">
+					<li class="work-intro0">
+						<label class="work-place">山东农业大学</label>
+						<label class="work-position">动物科学 专业</label>
+						<label class="work-do"></label>
+					</li>
+					<li class="work-intro1">
+						<label class="work-place">正大集团养殖部山东区</label>
+						<label class="work-position">兽医师</label>
+						<label class="work-do">负责协助部门主管对场区内家畜进行疾病处理，做
+
+好免疫工作</label>
+					</li>
+                                                                                          <li class="work-intro2">
+						<label class="work-place">学习</label>
+						<label class="work-position">前端相关知识</label>
+						<label class="work-do"></label>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+<section id="block-prjEXP">
+	<div class="container">
+		<div class="prjEXP-title">
+			<h2>项 目 经 验</h2>
+		</div>
 		
-	</head>
-	<body>
-		<ul>
-		<li>百度：<a href="baidu/index.html">链接</a></li>
-		<li>时间：<a href="time.html">链接</a></li>
-		<li>小球下落：<a href="ball.html">链接</a></li>
-		<li>获取随机字符：<a href="suiji.html">i链接</a></li>
-		<li>js简易计算器：<a href="jisuanqi.html">链接</a></li>
-		<li>计时：<a href="time2/index.html">链接</a></li>
-		<li>小球动画优化版：<a href="time3/index.html">链接</a></li>
-		<li>贪吃蛇：<a href="snake.html">链接</a></li>
-		<li>炮弹测试：<a href="tank/tank.html">链接</a></li>
-		<li>窗口拖拽：<a href="drag.html">链接</a></li>
-		<li>简易选项卡：<a href="tabs.html">链接</a></li>
-		<li>改变div属性：<a href="changestyle.html">链接</a></li>
-		<li>自定义滚动条：<a href="scroll bar/index.html">链接</a></li>
-		<li>自定义右键菜单：<a href="oncontextmenu/index.html">链接</a></li>
-		<li>选项卡：<a href="tabs/index.html">链接</a></li>
-		<li>移动效果：<a href="move/index.html">链接</a></li>
-		<li>跟随鼠标移动大图：<a href="follow mouse/index.html">链接</a></li>
-		<li>评分测试：<a href="star/index.html">链接</a></li>
-		<li>模拟苹果菜单：<a href="apple/index.html">链接</a></li>
-		<li>自动播放：<a href="change/index.html">链接</a></li>
+		<div class="prjEXP-con">
+			<ul class="prjs-one">
+			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
+			<li><span>时间</span> | <a href="time.html">点击进入</a></li>
+			<li><span>小球下落</span> | <a href="ball.html">点击进入</a></li>
+			<li><span>获取随机字符</span> | <a href="suijiindex.html">点击进入</a></li>
+			<li><span>计时</span> | <a href="baidu/time2/index.html">点击进入</a></li>
+			<li><span>小球动画优化版</span> | <a href="time3.html">点击进入</a></li>
+			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
+			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
+			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
+			<li><span>简易选项卡</span> | <a href="tabs.html">点击进入</a></li>
 		</ul>
-	</body>
-</html>
+		<ul class="prjs-two">
+			<li><span>js简易计算器</span> | <a href="jisuanqi.html">点击进入</a></li>
+			<li><span>改变div属性</span> | <a href="changestyle.html">点击进入</a></li>
+			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
+			<li><span>自定义右键菜单</span> | <a href="oncontextmenu/index.html">点击进入</a></li>
+			<li><span>选项卡</span> | <a href="tabs/index.html">点击进入</a></li>
+			<li><span>移动效果</span> | <a href="move/index.html">点击进入</a></li>
+			<li><span>跟随鼠标移动</span> | <a href="follow mouse/index.html">点击进入</a></li>
+			<li><span>评分测试</span> | <a href="star/index.html">点击进入</a></li>
+			<li><span>模拟苹果菜单</span> | <a href="apple/index.html">点击进入</a></li>
+			<li><span>自动播放</span> | <a href="change/index.html">点击进入</a></li>
+			
+		</ul></div>
+		
+		
+	</div>
+	
+	
+	
+	
+	
+</section>
+
+
+
+	<section id="block-wantMore">
+			<div id="intro-help">
+				<img id="mybiaqing" src="img/help2.jpg">
+			
+			
+<p>歪，快联系我吧<br>                              837808554@qq.com</p>
+		</p></div>
+	</section>
