--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<section id="block-intro">
 		<div class="container">
 			<div id="intro-icon">
-				<img id="myPhoto" src="img/myPhoto.jpg">
+				<img id="myPhoto" src="img/photo.jpg">
 			</div>
 			
 			<div id="intro-text">
