--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 好免疫工作</label>
 					</li>
                                                                                           <li class="work-intro2">
-						<label class="work-place">学习</label>
-						<label class="work-position">前端相关知识</label>
-						<label class="work-do"></label>
+						<label class="work-place">烟台新宇科技有限公司</label>
+						<label class="work-position">前端工程师</label>
+						<label class="work-do">完成日常网页设计以及后台交互功能</label>
 					</li>
 				</ul>
 			</div>
