--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
 			<li><span>时间</span> | <a href="time.html">点击进入</a></li>
 			<li><span>小球下落</span> | <a href="ball.html">点击进入</a></li>
-			<li><span>获取随机字符</span> | <a href="suijiindex.html">点击进入</a></li>
+			<li><span>获取随机字符</span> | <a href="suiji.html">点击进入</a></li>
 			<li><span>计时</span> | <a href="baidu/time2/index.html">点击进入</a></li>
 			<li><span>小球动画优化版</span> | <a href="time3.html">点击进入</a></li>
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
@@ -187,4 +187,4 @@
 			
 <p>歪，快联系我吧<br>                              837808554@qq.com</p>
 		</p></div>
-	</section>
+	</section>
