--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 			<li><span>时间</span> | <a href="time.html">点击进入</a></li>
 			<li><span>小球下落</span> | <a href="ball.html">点击进入</a></li>
 			<li><span>获取随机字符</span> | <a href="suiji.html">点击进入</a></li>
-			<li><span>计时</span> | <a href="baidu/time2/index.html">点击进入</a></li>
-			<li><span>小球动画优化版</span> | <a href="time3.html">点击进入</a></li>
+			<li><span>计时</span> | <a href="time2/index.html">点击进入</a></li>
+			<li><span>小球动画优化版</span> | <a href="time3/index.html">点击进入</a></li>
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
 			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
