--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div class="workEXP-main">	<ul class="timebox">
 					<li class="time0">2012.09 - 2016.7</li>
 					<li class="time1">2016.07 - 2017.2</li>
-                                                                                          <li class="time1">2018.01 - now</li>
+                                         <li class="time1">2018.01 - now</li>
 				</ul>
 				<div class="timeline"></div>
 				<ul class="workbox">
@@ -124,7 +124,6 @@
 						<label class="work-place">正大集团养殖部山东区</label>
 						<label class="work-position">兽医师</label>
 						<label class="work-do">负责协助部门主管对场区内家畜进行疾病处理，做
-
 好免疫工作</label>
 					</li>
                                                                                           <li class="work-intro2">
@@ -141,7 +140,6 @@
 		<div class="prjEXP-title">
 			<h2>项 目 经 验</h2>
 		</div>
-		
 		<div class="prjEXP-con">
 			<ul class="prjs-one">
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
@@ -153,7 +151,7 @@
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
 			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
-			<li><span>简易选项卡</span> | <a href="tabs.html">点击进入</a></li>
+			<li><span>仿熊猫TV</span> | <a href="panda_tv/new_file.html">点击进入</a></li>
 		</ul>
 		<ul class="prjs-two">
 			<li><span>js简易计算器</span> | <a href="jisuanqi.html">点击进入</a></li>
@@ -163,28 +161,17 @@
 			<li><span>选项卡</span> | <a href="tabs/index.html">点击进入</a></li>
 			<li><span>移动效果</span> | <a href="move/index.html">点击进入</a></li>
 			<li><span>跟随鼠标移动</span> | <a href="follow mouse/index.html">点击进入</a></li>
-			<li><span>评分测试</span> | <a href="star/index.html">点击进入</a></li>
-			<li><span>模拟苹果菜单</span> | <a href="apple/index.html">点击进入</a></li>
+			<li><span>LOL页</span> | <a href="LOL_active/index.html">点击进入</a></li>
+			<li><span>弹幕测试</span> | <a href="danmu/index.html">点击进入</a></li>
 			<li><span>自动播放</span> | <a href="change/index.html">点击进入</a></li>
 			
 		</ul></div>
-		
-		
 	</div>
-	
-	
-	
-	
-	
 </section>
-
-
-
 	<section id="block-wantMore">
 			<div id="intro-help">
 				<img id="mybiaqing" src="img/help2.jpg">
-			
-			
+
 <p>歪，快联系我吧<br>                              837808554@qq.com</p>
 		</p></div>
 	</section>
