--- a/index.html
+++ b/index.html
@@ -50,21 +50,16 @@
 进入</a> </li>
 				</ul>
 				<div class="fr">	<p>我是一个性格幽默、做事认真的人。<br>我喜欢研究所碰到的各种技术，不给自己
-
 设边界。<br>我有时间概念，能在约定时间内保证完成任务。</p>
 					<p>三个月前端开发学习经验，熟悉 HTML、CSS、Javascript，可以开发符合 W3C 标
-
 准的页面<br>
 						有良好的编码习惯。<br>
-						熟练使用 jQuery ，bootstrap框架，熟悉Ajax技术<br>
+						熟练使用jQuery，bootstrap框架，熟悉Ajax技术<br>
 						了解PHP+MySQL；理解基本的算法分析与数据结构，能够配合程序员完成
-
 相关工作。
 					</p>
 				</div>
 			</div>
-
-
 		</div>
 	</section>
 
@@ -110,8 +105,9 @@
 			</div>
 			<div class="workEXP-main">	<ul class="timebox">
 					<li class="time0">2012.09 - 2016.7</li>
-					<li class="time1">2016.07 - 2017.2</li>
-                                         <li class="time1">2018.01 - now</li>
+					<li class="time1">2016.07 - 2018.2</li>
+                                         <li class="time1">2018.3 - 2019.1</li>
+				<li class="time1">2019.1 - ？</li>
 				</ul>
 				<div class="timeline"></div>
 				<ul class="workbox">
@@ -126,7 +122,12 @@
 						<label class="work-do">负责协助部门主管对场区内家畜进行疾病处理，做
 好免疫工作</label>
 					</li>
-                                                                                          <li class="work-intro2">
+					 <li class="work-intro2">
+						<label class="work-place">正大集团养殖部山东区</label>
+						<label class="work-position">行政部门</label>
+						<label class="work-do">企业后勤管理及服务</label>
+					</li>
+                                                <li class="work-intro3">
 						<label class="work-place">学习</label>
 						<label class="work-position">前端相关知识</label>
 						<label class="work-do"></label>
