--- a/index.html
+++ b/index.html
@@ -169,6 +169,6 @@
 			<div id="intro-help">
 				<img id="mybiaqing" src="img/help2.jpg">
 
-<p>歪，快联系我吧<br>                              837808554@qq.com</p>
+<p>歪，大佬快联系我吧<br>                              837808554@qq.com</p>
 		</p></div>
 	</section>
