--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<ul class="prjs-one">
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
 			<li><span>小球下落</span> | <a href="ball.html">点击进入</a></li>
-			<li><span>获取随机字符</span> | <a href="suiji.html">点击进入</a></li>
+			<li><span>华容道游戏</span> | <a href="华容道/new_file.html">点击进入</a></li>
 			<li><span>小球动画优化版</span> | <a href="time3/index.html">点击进入</a></li>
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
