--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<p>三个月前端开发学习经验，熟悉 HTML、CSS、Javascript，可以开发符合 W3C 标
 准的页面<br>
 						有良好的编码习惯。<br>
-						熟练使用jQuery，bootstrap框架，熟悉Ajax技术<br>
-						了解PHP+MySQL；理解基本的算法分析与数据结构，能够配合程序员完成
+						熟练使用jQuery，vue ,bootstrap框架<br>
+						了解PHP+MySQL；理解基本的算法分析与数据结构，能够配合后台程序员完成
 相关工作。
 					</p>
 				</div>
@@ -73,9 +73,7 @@
 					<li>HTML(5)</li>
 					<li>CSS(3)</li>
 					<li>Javascript</li>
-					<li>PHP</li>
-					<li>SQL</li>
-				</ul>
+					<li>PHP</li>				</ul>
 				<ul class="skill-idea">
 					<li>思想</li>
 					<li>W3C标准</li>
@@ -86,8 +84,8 @@
 				<ul class="skill-frame">
 					<li>框架</li>
 					<li>jQuery</li>
-					<li>Bootstrap</li>
-					<li>jquery ui</li>
+					<li>vue</li>
+					<li>Bootstrap ui</li>
 				</ul>
 				<ul class="skill-tech">
 					<li>技术</li>
