--- a/LOL_active/index.html
+++ b/LOL_active/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -17,81 +17,28 @@
 			<div id="header" class="header header-close">
 				<div class="top">
 					<div class="top-inner layout">
-						<div id="J_nav" class="main-nav-wrap">
+						<div id="J_nav" class="main-nav-wrap" @mouseover="show" @mouseout="fli">
 							<ul class="main-nav">
-								<li>
-									<a href="javascript:void(0)">游戏资料 <span>GAME INFO</span></a>
-								</li>
-								<li>
-									<a href="javascript:void(0)">商城/合作 <span>STORE</span></a>
-								</li>
-								<li>
-									<a href="javascript:void(0)">用户互动 <span>COMMUNITY</span></a>
-								</li>
-								<li>
-									<a href="javascript:void(0)">赛事中心 <span>EVENTS</span></a>
-								</li>
-								<li>
-									<a href="javascript:void(0)">自助系统 <span>SYSTEM</span></a>
+								<li v-for="first in main">
+									<a href="javascript:void(0)">{{first.name}} <span>{{first.value}}</span></a>
 								</li>
 							</ul>
-						<div id="J_subNav" class="sub-nav">
+						<div id="J_subNav" ref="sub" class="sub-nav">
 							<ul class="sub-nav-inner">
-								<li class="sub-nav-item">
-									<a class="sub-nav-lnk" href="javascript:void(0)">新手指引</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)"><i class="icon-hot"></i>资料库</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">攻略中心</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">视频中心</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">开发者基地</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">海克斯战利品库</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">宇宙官网</a>
+								<li class="sub-nav-item" v-for="(list) in inner">
+									<a v-for ="sec in list"class="sub-nav-lnk" href="javascript:void(0)"><i v-if="sec.i==1" class="icon-hot"></i>{{sec.name}}</a>
 								</li>
-								<li class="sub-nav-item">
-									<a class="sub-nav-lnk" href="javascript:void(0)">点券充值</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)"><i class="icon-hot"></i>道聚城</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">周边商城</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">LOL桌游</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">LOL信用卡</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">网吧特权</a>
-								</li>
-								<li class="sub-nav-item">
-									<a class="sub-nav-lnk" href="javascript:void(0)">在线客服</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)"><i class="icon-hot"></i>官方社区</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">官方论坛</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">官方微信</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">官方微博</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">玩家创作</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">玩家服务</a>
-								</li>
-								<li class="sub-nav-item">
-									<a class="sub-nav-lnk" href="javascript:void(0)">LPL职业联赛</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)"><i class="icon-hot"></i>资料库</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">LDL发展联赛</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">集中冠军赛</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">德玛西亚杯</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">全球高校冠军杯</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">城市英雄争霸赛</a>
-								</li><li class="sub-nav-item">
-									<a class="sub-nav-lnk" href="javascript:void(0)">专区系统</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)"><i class="icon-hot"></i>封号查询</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">体验服申请</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">回放系统</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">服务状态查询</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">秩序殿堂</a>
-									<a class="sub-nav-lnk" href="javascript:void(0)">峡谷之巅</a>
-								</li>
-								
 							</ul>
 						</div>
 						</div>
-						<span id="J_searchClick" class="top-search">
+						<span id="J_searchClick" class="top-search" @click="oshow">
 							<i class="icon-top-search"></i>
 						</span>
-						<div id="J_search" class="top-search-main" style="display: none">
+						<div id="J_search" class="top-search-main" style="display: none" ref="J_search">
 							<div class="top-search-inner" id="top-inp">
 								<i class="icon-search-inner" id="top-op"></i>
 								<input type="text" id="J_searchText" class="input-search-box" placeholder="搜索 lol.qq.com"/>
-								<span id="top-clo" class="top-search-close" title="关闭搜索系统">
+								<span id="top-clo" class="top-search-close" @click="dis" title="关闭搜索系统">
 									
 								</span>
 							</div>
@@ -99,7 +46,7 @@
 						<a class="top-app" href="javascript:void(0)" title="前往掌上英雄联盟官网">
 							<i class="icon-top-app"></i>
 						</a>
-						<div id="J_topUser" class="top-user">
+						<div id="J_topUser" class="top-user" @mouseover="show2" @mouseout="fli2">
 							<div class="top-user-info">
 								<div class="top-user-side">
 									<span class="user-mask"></span>
@@ -114,7 +61,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="top-user-drop" id="J_userDrop">
+							<div class="top-user-drop" id="J_userDrop" ref="userDrop">
 								<div id="J_dropTips" class="top-user-drop-tips">登录并且绑定大区后才可查看您的具体信息哦~（包括战绩、资产、声望值等）</div>
 								<div class="top-user-data-tips">官网个人信息显示略有延迟，请以游戏内数据为准</div>
 								<a class="top-link-personal" href="javascript:void(0)" target="_blank">进入个人中心</a>
@@ -135,7 +82,6 @@
 			</div>
 		</div>
 		<!--nav-->
-		
 		<!--footer-->
 		<div id="gfooter" ams="152/35206/m131" age="18" dark="1" ieg-logo="1">
 			<div class="foot foot_dark ">
@@ -145,24 +91,11 @@
 						<a target="_blank" href="javascript:void(0)" title="RIOT" class="foot_left logo-riot">riot</a>
 					</div>
 					<ul class="foot_links">
-						<li class="link_map">
-							<a target="_blank" href="javascript:void(0)">腾讯互动娱乐</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">服务条款</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">腾讯游戏隐私保护指引</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">腾讯游戏招聘</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">腾讯游戏客服</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">游戏地图</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">商务合作</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">腾讯网</a>
-							<span class="f_line">|</span>
-							<a target="_blank" href="javascript:void(0)">网站导航</a>
+						<li  class="link_map">
+							<template v-for="ino in linka">
+								<a target="_blank" href="javascript:void(0)">{{ino.name}}</a>
+							<span v-if="ino.sp==1" class="f_line">|</span>
+							</template>
 						</li>
 						<li class="copyright_zh">
 							<a target="_blank" href="javascript:void(0)">腾讯公司版权所有</a>
@@ -188,8 +121,7 @@
 			</div>
 		</div>
 		
-		
-		<script type="text/javascript" src="js/jquery-2.1.0.js" ></script>
+		<script src="js/vue.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/new_file.js"></script>
 	</body>
 </html>
